--- a/new.css
+++ b/new.css
@@ -136,6 +136,7 @@ font-weight:400}
 
 
 
+ @media (max-width:991.98px){  margin: 2cm 4cm 3cm 2cm;}
 
 
 	.nav{display:flex;flex-wrap:wrap;padding-right:0;margin-bottom:0;list-style:none}
