--- a/new.css
+++ b/new.css
@@ -137,7 +137,7 @@ font-weight:400}
 .order-xl-12{order:12}.offset-xl-0{margin-right:0}.offset-xl-1{margin-right:8.3333333333%}.offset-xl-2{margin-right:16.6666666667%}.offset-xl-3{margin-right:25%}
 .offset-xl-4{margin-right:33.3333333333%}.offset-xl-5{margin-right:41.6666666667%}.offset-xl-6{margin-right:50%}.offset-xl-7{margin-right:58.3333333333%}
 .offset-xl-8{margin-right:66.6666666667%}.offset-xl-9{margin-right:75%}.offset-xl-10{margin-right:83.3333333333%}.offset-xl-11{margin-right:91.6666666667%}}
-
+.Ctext{color:#399F04}
 
 
  @media (max-width:991.98px){  margin: margin: 0 auto;
