--- a/new.css
+++ b/new.css
@@ -123,7 +123,7 @@ font-weight:400}
 .order-lg-4{order:4}
 .order-lg-8{order:8}.offset-lg-4{margin-right:33.3333333333%}.offset-lg-8{margin-right:66.6666666667%}
 }
-
+.refc{color:#2471A3}
 @media (min-width:1200px){.col-xl{flex-basis:0%;flex-grow:1;max-width:100%}
 .col-xl-auto{flex:0 0 auto;width:auto;max-width:100%}.col-xl-1{flex:0 0 8.3333333333%;max-width:8.3333333333%}
 .col-xl-2{flex:0 0 16.6666666667%;max-width:16.6666666667%}.col-xl-3{flex:0 0 25%;max-width:25%}
